SAK-20782
git-svn-id: https://source.sakaiproject.org/svn/taggable/trunk@94274 66ffb92e-73f9-0310-93c1-f5514f145a0a